# risc-v

./: .gitignore  CMakeLists.txt  build.sh  linker.ld  qemu.sh
cmake/: riscv-toolchain.cmake
src/: main.c
src/startup/: startup.s
